--- a/src/UI/Button/Button.module.css
+++ b/src/UI/Button/Button.module.css
@@ -6,11 +6,17 @@
   box-sizing: border-box;
   text-transform: uppercase;
   width: fit-content;
+  gap: 8px;
 }
 
 .secundary{
   background-color: transparent;
+  border: 2px solid #0F0A0A;
   padding: 13px 24px;
   border-radius: 90px;
+  text-transform: uppercase;
   width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
