--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,8 +2,5 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.copyright{
-  /* display: flex; */
+  padding-bottom: 20px;
 }
