--- a/src/sections/Comment/Comment.module.css
+++ b/src/sections/Comment/Comment.module.css
@@ -1,5 +1,6 @@
 .Comment{
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  padding-top: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
