--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,3 +4,17 @@
   justify-content: space-between;
   padding-bottom: 20px;
 }
+
+@media only screen and (max-width: 1024px) {
+  .footer{
+    flex-direction: column-reverse;
+  }
+
+  .footer > .logo{
+    display: none;
+  }
+
+  .footer > p{
+    text-align: center;
+  }
+}
