--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -34,3 +34,10 @@
 .active{
   background-color: var(--color-secundary);
 }
+
+@media only screen and (max-width: 1024px) {
+  .header,
+  .headerFixed{
+    display: flex;
+  }
+}
