--- a/src/sections/Reference/Reference.module.css
+++ b/src/sections/Reference/Reference.module.css
@@ -1,7 +1,6 @@
 .Reference{
   display: flex;
   justify-content: space-between;
-  /* min-height: 100vh; */
   align-items: center;
   gap: 24px;
   padding: 80px 0;
@@ -31,4 +30,15 @@
 
 .space{
   min-height: 80vh;
+}
+
+@media only screen and (max-width: 1024px) {
+  .Reference{
+    padding: 0;
+    flex-direction: column-reverse;
+  }
+
+  .space{
+    display: none;
+  }
 }
