--- a/src/sections/Quote/Quote.module.css
+++ b/src/sections/Quote/Quote.module.css
@@ -25,3 +25,21 @@
 .author{
   opacity: .5;
 }
+
+@media only screen and (max-width: 1024px) {
+  .section {
+    padding: 24px;
+  }
+
+  .section > .quote {
+    text-align: start;
+    font-size: 16px;
+    line-height: 25.89px;
+  }
+
+  .section > .author{
+    font-size: 16px;
+    line-height: 25.89px;
+  }
+
+}
