--- a/src/stylesheet/typographies.css
+++ b/src/stylesheet/typographies.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700;900&display=swap');
 
 .logo{
   font-family: "Poppins", sans-serif;
@@ -135,4 +135,3 @@
   background-color: var(--black);
   color: var(--color-secundary);
 }
-
