--- a/src/UI/Button/Button.module.css
+++ b/src/UI/Button/Button.module.css
@@ -1,5 +1,5 @@
 .primary{
-  background-color: #42E2B8;
+  background-color: var(--color-secundary);
   border: 2px solid #0F0A0A;
   padding: 13px 24px;
   border-radius: 90px;
@@ -20,4 +20,13 @@
   display: flex;
   align-items: center;
   gap: 8px;
+}
+
+.btn{
+  transition: .2s;
+}
+
+.btn:hover{
+  color: white;
+  border-color: white;
 }
